--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGODB_URL  = mongodb+srv://group25:FngRysWn2dQr64AH@cluster0.6nepiht.mongodb.net/jobportal
+MONGODB_URL  ="mongodb://localhost:27017/abcd"
 
 JWT_SECRET_KEY = group25
 
